cmake_minimum_required(VERSION 3.19)
project(C_ed)

set(CMAKE_CXX_STANDARD 17)

add_executable(C_ed
        с/les1.cpp
        с/les2.cpp
        с/les3.cpp
        с/valLes3.cpp
        с/les4.cpp
        ch/chall3.cpp
        c_ed_headers.h
        ch/bitmap_image.hpp
        с/les6.cpp
        oop/source.cpp
        с/les7.cpp
        oop/source.h
        oop/oop1.cpp
        с/les5.cpp
        с/sources.cpp
        с/sourses.h
        oop/oop2.cpp
        oop/oop3.cpp
        oop/oop4.cpp
        c-hard/hardsource.cpp
        c-hard/hardsource.h
        c-hard/hard1.cpp
        oop/oop5.cpp c-hard/hard2.cpp

        c-hard/hard3.cpp c-hard/hatd4.cpp)
